--- a/styles.css
+++ b/styles.css
@@ -1,72 +1,133 @@
+/* Reset CSS */
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-    margin: 0;
-    font-family: 'Roboto', arial;
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-header {
-    padding: 18px;
-    height: 500px;
-    background-color: #1f2937;
+/* SETUP */
+.picture {
+    display: block;
 }
 
-.header-top-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 12px 175px;
-    margin-bottom: 26px;
+img {
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
-.header-logo {
-    font-size: 24px;
-    color: #f9faf8;
-}
-.header-links-container > a{ 
-    font-size: 18px;color: #e5e7eb;
-}
-
-.header-links-container > a {
-    margin: 0px 8px;
+a {
+    color: inherit;
     text-decoration: none;
 }
 
-.header-main-container {
+/* SETTINGS */
+html {
+    --dark-background-header-text: #1f2937;
+    --header-text: #f9faf8;
+    --secondary-text-link-quote: #e5e7eb;
+    --cta: #3882f6;
+}
+
+/* STRUCTURE */
+body {
     display: flex;
-    justify-content: space-between;
-    padding: 0px 175px;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-.header-main-left-container,
-.header-main-right-container {
-    height: 200px;
-    width: 400px;
+/* header, footer, main {
+    border: 4px solid red;
+} */
+
+main {
+    flex-grow: 1;
 }
 
-.header-main-left-container {
-    padding: 12px 80px 0px 0px;
-    text-align: left;
+/* section {
+    border: 4px solid lime;
+} */
+
+inner-column {
+    display: block;
+    /* border: 4px solid orange; */
+    padding: 10px;
+    width: 98%;max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.header-main-left-container > h1 {
+/* TYPOGROPHY */
+.text-bold {
+    font-family: 'Roboto', arial;
     font-size: 48px;
     font-weight: bolder;
-    color: #f9faf8;
+    line-height: .9;
+    color: var(--header-text);
 }
 
-.header-main-left-container > p {
+.text-normal {
+    font-family: 'Roboto', arial;
     font-size: 18px;
-    color: #e5e7eb;
+    color: var(--header-text);
 }
 
-.header-main-right-container {
-    padding: 12px 80px;
-    background-color: aqua;
-}
-
-.header-main-right-container > p {
-    text-align: center;
-    vertical-align: middle;
-    line-height: 150px;
+/* COMPONENTS */
+.button {
+    font-family: 'Roboto', arial;
+    border: none;
+    border-radius: 10px;
+    padding: 8px 40px;
+    font-size: 18px;
+    background-color: #3882f6;
+    color: var(--header-text);
 }
 
 button {
@@ -74,6 +135,55 @@ button {
     border-radius: 10px;
     padding: 8px 40px;
     font-size: 18px;
-    background-color: #3882f6;
-    color: #f9faf8;
+    background-color: var(--cta);
+    color: var(--header-text);
+}
+
+/* MODULES */
+.main-cta {
+    display: block;
+}
+
+.main-cta .picture{
+    display: block;
+}
+
+@media (min-width: 700px) {
+    .main-cta {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+    }
+    .main-cta :is(.text-content, .picture){
+        flex-basis: 50%;
+    }
+}
+
+/* STYLING */
+header, footer {
+    padding: 30px 0px;
+    background-color: var(--dark-background-header-text);
+}
+
+header h1 {
+    font-size: 24px;
+    color: var(--header-text);
+}
+
+.welcome {
+    padding-top: 30px;
+    background-color: var(--dark-background-header-text);
+}
+
+.main-cta .text-content h1, p, button {
+    margin-bottom: 20px;
+}
+
+.card-list {
+    display: flex;
+    justify-content: space-around;
+}
+
+.card-product {
+    max-width: 200px;
 }
